extra animations and gradient-colors added

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     </div>
                     <div class="plans">
                         <div class="basic__plan">
+                            <div class="basic__stripe"></div>
                             <div class="basic__top">
                                 <p class="basic__name">PERSONAL</p>
                                 <p class="basic__price">$17.99</p>
@@ -269,6 +270,7 @@
                             </div>
                         </div>
                         <div class="enterprise__plan">
+                            <div class="enterprise__stripe"></div>
                             <div class="enterprise__top">
                                 <p class="enterprise__name">ENTERPRISE</p>
                                 <p class="enterprise__price">$57.99</p>
