--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Final project</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -27,8 +28,28 @@
                         <li><a href="" class="nav__link nav__link--primary">Sign Up</a></li>
                     </div>
                 </ul>
+                <button class="btn__menu" onclick="openMenu()">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="menu__backdrop">
+                    <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                        <i class="fas fa-times"></i>
+                    </button>
+                    <ul class="menu__links">
+                        <li class="menu__list">
+                            <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+                        </li>
+                        <li class="menu__list">
+                            <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
+
         <header>
             <div class="header__container">
                 <div class="header__row">
@@ -143,7 +164,7 @@
                 <div class="quality__row">
                     <div class="quality__description">
                         <h4 class="section__label">QUALITY WORK</h4>
-                        <h2 class="feature__title quality__title">Designed & Developed by <span
+                        <h2 class="quality__title">Designed & Developed by <span
                                 class="purple">Professionals.</span></h2>
                         <p class="quality__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
                             nihil et modi similique ipsum non in perspiciatis veritatis dolores consequuntur dicta velit
@@ -174,19 +195,19 @@
                         </svg>
                         <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
                     </figure>
-                    <div class="steps__container">
+                    <div class="step__container">
                         <h4 class="section__label">STEPS</h4>
                         <h2 class="steps__title">Easy to <span class="purple">Get Started.</span></h2>
                         <div class="steps__list">
                             <div class="step">
-                                <p class="step__number">01</p>
+                                <div class="step__number">01</div>
                                 <div class="step__description">
                                     <h2 class="step__title">Register</h2>
                                     <p class="step__para">Create an account with us using Google or Facebook.</p>
                                 </div>
                             </div>
                             <div class="step">
-                                <p class="step__number">02</p>
+                                <div class="step__number">02</div>
                                 <div class="step__description">
                                     <h2 class="step__title">Download</h2>
                                     <p class="step__para">Browse and Download the template that you like from the
@@ -194,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="step">
-                                <p class="step__number">03</p>
+                                <div class="step__number">03</div>
                                 <div class="step__description">
                                     <h2 class="step__title">Run</h2>
                                     <p class="step__para">Follow the instructions to setup and customize the template to
@@ -210,9 +231,9 @@
         <section id="values">
             <div class="values__container">
                 <div class="values__row">
-                    <div class="values__title">
+                    <div class="values__title--box">
                         <h4 class="section__label">VALUES</h4>
-                        <h2 class="section__title">We Always Abide by Our <span class="purple">Principles.</span></h2>
+                        <h2 class="values__title">We Always Abide by Our <span class="purple">Principles.</span></h2>
                         <p class="value__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa dolorum
                             velit asperiores quas quos. Officia eveniet molestiae, ut autem voluptatem similique rerum
                             fugiat rem praesentium! Voluptatum quae explicabo velit cum recusandae non hic.</p>
@@ -378,7 +399,9 @@
                     <div class="start__box">
                         <svg viewBox="0 0 600 600" class="start__blob--1">
                             <g transform="translate(300,300)">
-                                <path d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="rgb(80,17,204)"></path>
+                                <path
+                                    d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
+                                    fill="rgb(80,17,204)"></path>
                             </g>
                         </svg>
                         <svg viewBox="0 0 600 600" class="start__blob--2">
