--- a/index.html
+++ b/index.html
@@ -37,13 +37,22 @@
                     </button>
                     <ul class="menu__links">
                         <li class="menu__list">
-                            <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+                            <a href="#features" class="menu__link" onclick="closeMenu()">About</a>
                         </li>
                         <li class="menu__list">
-                            <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+                            <a href="#testimonials" class="menu__link" onclick="closeMenu()">Blog</a>
                         </li>
                         <li class="menu__list">
-                            <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+                            <a href="#pricing" class="menu__link" onclick="closeMenu()">Pricing</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#get__started" class="menu__link" onclick="closeMenu()">Contact Us</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#footer" class="menu__link" onclick="closeMenu()">Login</a>
+                        </li>
+                        <li class="menu__list">
+                            <a href="#get__started" class="menu__link nav__link--primary" onclick="closeMenu()">Sign Up</a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +63,8 @@
             <div class="header__container">
                 <div class="header__row">
                     <div class="header__description">
-                        <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <h1 class="header__description--title">Beautiful React Templates <span class="purple">for
+                                you.</span></h1>
                         <p class="header__description--para">
                             Our templates are easy to setup, understand and customize. Fully modular components with a
                             variety of pages and components.
@@ -164,8 +174,8 @@
                 <div class="quality__row">
                     <div class="quality__description">
                         <h4 class="section__label">QUALITY WORK</h4>
-                        <h2 class="quality__title">Designed & Developed by <span
-                                class="purple">Professionals.</span></h2>
+                        <h2 class="quality__title">Designed & Developed by <span class="purple">Professionals.</span>
+                        </h2>
                         <p class="quality__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
                             nihil et modi similique ipsum non in perspiciatis veritatis dolores consequuntur dicta velit
                             praesentium quia, doloremque, blanditiis qui eos molestiae ea quas inventore reiciendis
@@ -196,7 +206,7 @@
                         <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
                     </figure>
                     <div class="step__container">
-                        <h4 class="section__label">STEPS</h4>
+                        <h4 class="section__label step__label">STEPS</h4>
                         <h2 class="steps__title">Easy to <span class="purple">Get Started.</span></h2>
                         <div class="steps__list">
                             <div class="step">
@@ -245,7 +255,7 @@
                                     </figure>
                                     <div class="value__title">Affordable</div>
                                 </div>
-                                <p class="value__para">We promise to offer you the best rate we can - at par with the
+                                <p class="value__paras">We promise to offer you the best rate we can - at par with the
                                     industry standard.</p>
                             </div>
                             <div class="value">
@@ -323,7 +333,7 @@
                                 <p class="enterprise__duration">MONTHLY</p>
                             </div>
                             <div class="enterprise__middle">
-                                <div class="enterprise__target">For Large Companies</div>
+                                <div class="basic__target">For Large Companies</div>
                                 <p class="plan__feature">90 Templates</p>
                                 <p class="plan__feature">27 Landing Pages</p>
                                 <p class="plan__feature">37 Internal Pages</p>
@@ -347,7 +357,7 @@
             </div>
         </section>
 
-        <section id="Testimonials">
+        <section id="testimonials">
             <div class="testimonial__container">
                 <div class="testimonial__row">
                     <div class="test__img--wrapper">
@@ -393,7 +403,7 @@
             </div>
         </section>
 
-        <section id="get_started">
+        <section id="get__started">
             <div class="start__container">
                 <div class="start__row">
                     <div class="start__box">
@@ -412,18 +422,20 @@
                             </g>
                         </svg>
                         <div class="start__title">Devolopers all over the world are happily using Treact.</div>
-                        <div class="start__button">
-                            <button class="start">Get Started</button>
-                        </div>
-                        <div class="start__button">
-                            <button class="contact">Contact Us</button>
+                        <div class="start__buttons">
+                            <div class="start__button">
+                                <button class="start">Get Started</button>
+                            </div>
+                            <div class="start__button">
+                                <button class="contact">Contact Us</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <footer>
+        <footer id="footer">
             <div class="footer__row">
                 <svg viewBox="0 0 600 600" class="footer__blob--1">
                     <g transform="translate(300,300)">
