--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             </div>
                         </div>
                         <div>
-                            <button class="quality__btn">Learn More</button>
+                            <button class="quality__btn value__btn">Learn More</button>
                         </div>
                     </div>
                     <figure class="values__img--wrapper">
