fixing major flaws

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                     <li><a href="" class="nav__link">Blog</a></li>
                     <li><a href="" class="nav__link">Pricing</a></li>
                     <li><a href="" class="nav__link">Contact Us</a></li>
-                    <div class="last__links">
-                        <li><a href="" class="nav__link">Login</a></li>
-                        <li><a href="" class="nav__link nav__link--primary">Sign Up</a></li>
-                    </div>
+                    <li><a href="" class="nav__link">Login</a></li>
+                    <li><a href="" class="nav__link nav__link--primary">Sign Up</a></li>
                 </ul>
                 <button class="btn__menu" onclick="openMenu()">
                     <i class="fas fa-bars"></i>
@@ -52,7 +50,8 @@
                             <a href="#footer" class="menu__link" onclick="closeMenu()">Login</a>
                         </li>
                         <li class="menu__list">
-                            <a href="#get__started" class="menu__link nav__link--primary" onclick="closeMenu()">Sign Up</a>
+                            <a href="#get__started" class="menu__link nav__link--primary" onclick="closeMenu()">Sign
+                                Up</a>
                         </li>
                     </ul>
                 </div>
@@ -241,7 +240,7 @@
         <section id="values">
             <div class="values__container">
                 <div class="values__row">
-                    <div class="values__title--box">
+                    <div class="values__description">
                         <h4 class="section__label">VALUES</h4>
                         <h2 class="values__title">We Always Abide by Our <span class="purple">Principles.</span></h2>
                         <p class="value__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa dolorum
@@ -406,8 +405,7 @@
         <section id="get__started">
             <div class="start__container">
                 <div class="start__row">
-                    <div class="start__box">
-                        <svg viewBox="0 0 600 600" class="start__blob--1">
+                     <svg viewBox="0 0 600 600" class="start__blob--1">
                             <g transform="translate(300,300)">
                                 <path
                                     d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
@@ -421,107 +419,110 @@
                                     fill="rgb(80,17,204)"></path>
                             </g>
                         </svg>
-                        <div class="start__title">Devolopers all over the world are happily using Treact.</div>
-                        <div class="start__buttons">
-                            <div class="start__button">
-                                <button class="start">Get Started</button>
-                            </div>
-                            <div class="start__button">
-                                <button class="contact">Contact Us</button>
+                        <div class="start__box">
+                        <div class="start__contact--row">
+                            <div class="start__title">Devolopers all over the world are happily using Treact.</div>
+                            <div class="start__buttons">
+                                <div class="start__button">
+                                    <button class="start">Get Started</button>
+                                </div>
+                                <div class="start__button">
+                                    <button class="contact">Contact Us</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+    </main>
 
-        <footer id="footer">
-            <div class="footer__row">
-                <svg viewBox="0 0 600 600" class="footer__blob--1">
-                    <g transform="translate(300,300)">
-                        <path
-                            d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
-                            fill="rgba(80,17,204)"></path>
-                    </g>
-                </svg>
-                <svg viewBox="0 0 600 600" class="footer__blob--2">
-                    <g transform="translate(300,300)">
-                        <path
-                            d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
-                            fill="rgba(80,17,204)"></path>
-                    </g>
-                </svg>
-                <div class="footer__columns">
-                    <div class="footer__column">
-                        <ul class="footer__rows">
-                            <p class="column__title">MAIN</p>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">About Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__column">
-                        <ul class="footer__rows">
-                            <p class="column__title">PRODUCT</p>
-                            <li><a href="#">Log In</a></li>
-                            <li><a href="#">Personal</a></li>
-                            <li><a href="#">Business</a></li>
-                            <li><a href="#">Team</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__column">
-                        <ul class="footer__rows">
-                            <p class="column__title">PRESS</p>
-                            <li><a href="#">Logos</a></li>
-                            <li><a href="#">Events</a></li>
-                            <li><a href="#">Stories</a></li>
-                            <li><a href="#">Office</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__column">
-                        <ul class="footer__rows">
-                            <p class="column__title">TEAM</p>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Founders</a></li>
-                            <li><a href="#">Culture</a></li>
-                            <li><a href="#">Onboarding</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__column">
-                        <ul class="footer__rows">
-                            <p class="column__title">LEGAL</p>
-                            <li><a href="#">GDPR</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Disclaimer</a></li>
-                        </ul>
-                    </div>
+    <footer id="footer">
+        <div class="footer__row">
+            <svg viewBox="0 0 600 600" class="footer__blob--1">
+                <g transform="translate(300,300)">
+                    <path
+                        d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
+                        fill="rgba(80,17,204)"></path>
+                </g>
+            </svg>
+            <svg viewBox="0 0 600 600" class="footer__blob--2">
+                <g transform="translate(300,300)">
+                    <path
+                        d="M153.6,-239C199.1,-209.8,236,-167.2,258.4,-118C280.9,-68.9,288.9,-13.1,281.2,40.4C273.5,93.9,250.1,145.2,214.7,186.1C179.3,226.9,131.9,257.4,80,272.6C28.2,287.8,-28.2,287.8,-80,272.6C-131.9,257.4,-179.3,226.9,-214.7,186.1C-250.1,145.2,-273.5,93.9,-281.2,40.4C-288.9,-13.1,-280.9,-68.9,-258.4,-118C-236,-167.2,-199.1,-209.8,-153.6,-239C-108.1,-268.3,-54.1,-284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z"
+                        fill="rgba(80,17,204)"></path>
+                </g>
+            </svg>
+            <div class="footer__columns">
+                <div class="footer__column">
+                    <ul class="footer__rows">
+                        <p class="column__title">MAIN</p>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </ul>
                 </div>
-                <div>
-                    <hr id="footer__line">
+                <div class="footer__column">
+                    <ul class="footer__rows">
+                        <p class="column__title">PRODUCT</p>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#">Personal</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Team</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <ul class="footer__rows">
+                        <p class="column__title">PRESS</p>
+                        <li><a href="#">Logos</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Stories</a></li>
+                        <li><a href="#">Office</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <ul class="footer__rows">
+                        <p class="column__title">TEAM</p>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">Founders</a></li>
+                        <li><a href="#">Culture</a></li>
+                        <li><a href="#">Onboarding</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <ul class="footer__rows">
+                        <p class="column__title">LEGAL</p>
+                        <li><a href="#">GDPR</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <hr id="footer__line">
 
-                    <div class="footer__container">
-                        <div class="footer__logo">
-                            <img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" class="nav__logo--img"
-                                alt="">
-                            <p class="footer__logo--title">Treact Inc.</p>
-                        </div>
-                        <div>
-                            <p class="footer__copyright">© 2018 Treact Inc. All Rights Reserved.</p>
-                        </div>
-                        <div>
-                            <ul class="social__links">
-                                <li class="social__link"><i class="fa-brands fa-facebook"></i></li>
-                                <li class="social__link"><i class="fa-brands fa-twitter"></i></li>
-                                <li class="social__link"><i class="fa-brands fa-youtube"></i></li>
-                            </ul>
-                        </div>
+                <div class="footer__container">
+                    <div class="footer__logo">
+                        <img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" class="nav__logo--img"
+                            alt="">
+                        <p class="footer__logo--title">Treact Inc.</p>
+                    </div>
+                    <div>
+                        <p class="footer__copyright">© 2018 Treact Inc. All Rights Reserved.</p>
+                    </div>
+                    <div>                        
+                        <ul class="social__links">
+                        <li class="social__link"><i class="fa-brands fa-facebook"></i></li>
+                        <li class="social__link"><i class="fa-brands fa-twitter"></i></li>
+                        <li class="social__link"><i class="fa-brands fa-youtube"></i></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </footer>
-    </main>
+        </div>
+    </footer>
 
 </body>
 
