--- a/index.html
+++ b/index.html
@@ -26,37 +26,46 @@
                     <li><a href="" class="nav__link">Login</a></li>
                     <li><a href="" class="nav__link nav__link--primary">Sign Up</a></li>
                 </ul>
-                <button class="btn__menu" onclick="openMenu()">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="menu__backdrop">
-                    <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-                        <i class="fas fa-times"></i>
-                    </button>
-                    <ul class="menu__links">
-                        <li class="menu__list">
-                            <a href="#features" class="menu__link" onclick="closeMenu()">About</a>
-                        </li>
-                        <li class="menu__list">
-                            <a href="#testimonials" class="menu__link" onclick="closeMenu()">Blog</a>
-                        </li>
-                        <li class="menu__list">
-                            <a href="#pricing" class="menu__link" onclick="closeMenu()">Pricing</a>
-                        </li>
-                        <li class="menu__list">
-                            <a href="#get__started" class="menu__link" onclick="closeMenu()">Contact Us</a>
-                        </li>
-                        <li class="menu__list">
-                            <a href="#footer" class="menu__link" onclick="closeMenu()">Login</a>
-                        </li>
-                        <li class="menu__list">
-                            <a href="#get__started" class="menu__link nav__link--primary" onclick="closeMenu()">Sign
-                                Up</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
+            <button class="btn__menu" onclick="openMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn__menu--svg">
+                    <line x1="3" y1="12" x2="21" y2="12"></line>
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <line x1="3" y1="18" x2="21" y2="18"></line>
+                </svg>
+            </button> 
         </nav>
+        <div>
+            <div class="menu__backdrop">
+                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledCloseIcon-lj69nl-14 fASujC">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+                <ul class="menu__links">
+                    <li class="menu__list">
+                        <a href="#features" class="menu__link" onclick="closeMenu()">About</a>
+                    </li>
+                    <li class="menu__list">
+                        <a href="#testimonials" class="menu__link" onclick="closeMenu()">Blog</a>
+                    </li>
+                    <li class="menu__list">
+                        <a href="#pricing" class="menu__link" onclick="closeMenu()">Pricing</a>
+                    </li>
+                    <li class="menu__list">
+                        <a href="#get__started" class="menu__link" onclick="closeMenu()">Contact Us</a>
+                    </li>
+                    <li class="menu__list">
+                        <a href="#footer" class="menu__link" onclick="closeMenu()">Login</a>
+                    </li>
+                    <li class="menu__list">
+                        <a href="#get__started" class="menu__link nav__link--primary" onclick="closeMenu()">Sign
+                            Up</a>
+                    </li>
+                </ul>
+            </div>
+            </div>
 
         <header>
             <div class="header__container">
@@ -116,7 +125,7 @@
                             <div class="feature__boxes">
                                 <h2 class="feature__descr--title">24/7 Support</h2>
                                 <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                                    dolor sit amet. </p>
+                                    dolor sit. </p>
                             </div>
                         </div>
                         <div class="feature">
@@ -125,7 +134,7 @@
                             <div class="feature__boxes">
                                 <h2 class="feature__descr--title">Customizable</h2>
                                 <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                                    dolor sit amet. </p>
+                                    dolor sit. </p>
                             </div>
                         </div>
                         <div class="feature">
@@ -134,7 +143,7 @@
                             <div class="feature__boxes">
                                 <h2 class="feature__descr--title">Reliable</h2>
                                 <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                                    dolor sit amet. </p>
+                                    dolor sit. </p>
                             </div>
                         </div>
                         <div class="feature">
@@ -143,7 +152,7 @@
                             <div class="feature__boxes">
                                 <h2 class="feature__descr--title">Fast</h2>
                                 <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                                    dolor sit amet. </p>
+                                    dolor sit. </p>
                             </div>
                         </div>
                         <div class="feature">
@@ -152,7 +161,7 @@
                             <div class="feature__boxes">
                                 <h2 class="feature__descr--title">Easy</h2>
                                 <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                                    dolor sit amet. </p>
+                                    dolor sit. </p>
                             </div>
                         </div>
                     </div>
@@ -456,7 +465,7 @@
             <div class="footer__columns">
                 <div class="footer__column">
                     <ul class="footer__rows">
-                        <p class="column__title">MAIN</p>
+                        <li class="column__title">MAIN</li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">FAQs</a></li>
                         <li><a href="#">Support</a></li>
@@ -465,7 +474,7 @@
                 </div>
                 <div class="footer__column">
                     <ul class="footer__rows">
-                        <p class="column__title">PRODUCT</p>
+                        <li class="column__title">PRODUCT</li>
                         <li><a href="#">Log In</a></li>
                         <li><a href="#">Personal</a></li>
                         <li><a href="#">Business</a></li>
@@ -474,7 +483,7 @@
                 </div>
                 <div class="footer__column">
                     <ul class="footer__rows">
-                        <p class="column__title">PRESS</p>
+                        <li class="column__title">PRESS</li>
                         <li><a href="#">Logos</a></li>
                         <li><a href="#">Events</a></li>
                         <li><a href="#">Stories</a></li>
@@ -483,7 +492,7 @@
                 </div>
                 <div class="footer__column">
                     <ul class="footer__rows">
-                        <p class="column__title">TEAM</p>
+                        <li class="column__title">TEAM</li>
                         <li><a href="#">Career</a></li>
                         <li><a href="#">Founders</a></li>
                         <li><a href="#">Culture</a></li>
@@ -492,7 +501,7 @@
                 </div>
                 <div class="footer__column">
                     <ul class="footer__rows">
-                        <p class="column__title">LEGAL</p>
+                        <li class="column__title">LEGAL</li>
                         <li><a href="#">GDPR</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms of Service</a></li>
